--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/Group1.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic20.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 								</div>
 								<br>
 								<section>
 									<h3>Chapter meetings</h3>
-									<p>Before the Unruh Institute's Tuesday evening Ground Zero events, Associates meet biweekly to host intimate Q&As with panelists and update members on Associates' upcoming programming.</p>
+									<p>At our meetings, we expose Associates to exclusive opportunities, whether it is information for events, meet & greets, or professional development opportunities.</p>
 								</section>
 								<section>
 									<h3>Lunches with Leaders</h3>
@@ -175,45 +175,45 @@
 					<section id="three" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Who We Are</h2>
-							<p> The following executive board members were elected for the 2018 calendar year:</p>
+							<p> The following executive board members were elected for the 2019 calendar year:</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-map"></span>
-									<h3>Eleonora Viotto, President</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic10.jpg")/></a>
-									<p>Eleonora Viotto is a junior from Seattle, Washington double majoring in Political Science and communications with a minor in History. She is honored to be serving as the President of the Unruh Associates for 2018. Previously, she has served as the Director of Programming for the Unruh Associates and worked as the VP of External Relations for Phi Alpha Delta Fall 2017. Eleonora has previously interned at the Pluvious Group in Downtown Los Angeles as well as volunteered with Rep. Dave Reichert’s (WA-8) office. Most recently, Eleonora interned with Blue Wave Politics in Seattle, WA, working on Maria Cantwell’s re-election campaign, Jenny Durkan’s bid for Seattle Mayor, as well as a variety of local and state races. On campus, she is a Presidential Scholar and a member of the Trojans Scholars Society, as well as a member of the Political Science Honors program for freshmen and sophomores. Eleonora is also a staff writer and copy editor for the Daily Trojan, as well as a member Model UN team at USC. After graduating from USC, she plans on attending law school and studying corporate law.
+									<h3>María Manjárrez, President</h3>
+									<img style = "width: 50%; height: auto" src= "images/Maria1.jpg")/></a>
+									<p>María Fernanda Manjárrez is a junior double majoring in Political Science and Public Policy and Law. Maria has been involved with the Institute since she was 15 years old when she attended the annual Young Women’s Leadership Conference. She is deeply humbled and honored to serve as the President of Unruh Associates for 2019. On campus, Maria is also a member of the Phi Alpha Delta Pre-Law fraternity and a Norman Topping Student Aid Fund Scholar. Maria Fernanda has previously interned for Hispanas Organized for Political Equality, D-33 Congressman Ted W. Lieu, and has done research with the Skid Row Housing Trust through POSC 395. Maria is passionate about increased access to higher education, so she was appointed by Governor Brown to serve as a Commissioner on the California Student Aid Commission. After graduating from USC, she plans on attending law school and pursuing a career in public service.
 									</p>
 								</section>
 								<section>
 									<span class="icon major fa-binoculars"></span>
-									<h3>Oskar Muller, Vice President</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic11.jpg")/></a>
-									<p>Oskar Müller is a junior from River Forest, Illinois. He is majoring in Economics, and minoring in Political Science with an emphasis in Law and Public Policy. He currently serves as Vice President for the Unruh Associates student group. He is an active member of the on-campus outdoor adventure group SC Outfitters. In addition to his employment as Unruh student staff, Oskar previously interned for NationBuilder, Illinois State Senator Don Harmon and still serves as a courier for Postmates. When he is not immersed in political work, Oskar enjoys camping and hiking all around the country, and is also an avid musician. He hopes to pursue a career as a political consultant after obtaining his undergraduate degree.
+									<h3>José Gutiérrez, Vice President</h3>
+									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
+									<p>José Guillermo Gutiérrez is a junior from Mexico City pursuing a Political Science and Philosophy double major and a minor in Digital Studies. On campus, he is the Director of Student Safety at Undergraduate Student Government and a Warren Bennis Scholar. Over the Summer, José was a Leonard D. Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395. He was also an Action Civics teacher in a local charter school through the Unruh Civic Engagement Program.
 									</p>
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
-									<h3>Srividya Dasaraju, Director of Programming</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic12.jpg")/></a>
-									<p>Srividya Dasaraju is a rising junior at the University of Southern California. She is majoring in International Relation, pursuing a progressive Master’s in Public Diplomacy and minoring in Geospatial Intelligence Technologies. Her academic interests include security studies and the politics of climate change. Srividya has previously interned for Senate Minority Leader Chuck Schumer and the Atlantic Council in DC. At USC, she is on the Trojan Policy Debate Team, an executive editor for the Journal of Law and Society, and contributor to Glimpse from the Globe. Srividya also is a research assistant in the Security Political Economy Lab where she helps research the climate change’s impact on Arctic militarization, and produces research for Facebook. Upon graduating, she hopes to attend law school, later entering the field of defense policy.
+									<h3>Ayojide Hospidales, Director of Programming</h3>
+									<img style = "width: 50%; height: auto" src= "images/Jide3.jpg")/></a>
+									<p>Ayojide Hospidales is a sophomore majoring in Political Science. As a political junky, Ayojide's passion is molding students to make them more civically engaged. He has volunteered at VoteSC and the Center for Black Students Affairs. In the future, he hopes to become a government attorney and judge, for which he has received great counsel on this path as he is currently mentored by Judge Bobbi Tillmon as part of the Legacy Through Leadership Mentorship Program.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Misa Buscemi, Director of Publicity</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic13.jpg")/></a>
-									<p>Misa Buscemi is a junior at USC studying public relations and political science. Misa spent her summer as a public relations intern for Apple Inc. in Cupertino, CA, supporting their corporate communications team. Previously she interned for Mercury Public Affairs in their Los Angeles office, working on a variety of research and outreach projects. Prior to that, she interned for U.S. Senator Chuck Schumer in her hometown of Buffalo, NY. At USC, Misa works as a social media editor for Annenberg Media and is also involved in the Unruh Institute of Politics’ student organization, Unruh Associates. In her free time Misa enjoys running and traveling when she can.</p>
+									<h3>Deven Patel, Director of Publicity</h3>
+									<img style = "width: 50%; height: auto" src= "images/Deven2.jpg")/></a>
+									<p>Deven Patel is a sophomore from Irvine, CA, majoring in Environmental Studies with a concentration in Public Policy. He is involved at the Novus Think Tank, Undergraduate Student Government, and Dornsife Ambassadors.He is also a member of the Thematic Option Honors Program. His love for politics stemmed from following the 2016 election, and shortly after, interning with a City Council Member from Irvine.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
-									<h3>Celia Garth, Administrator</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic14.jpg")/></a>
-									<p>Celia Garth is a junior from Rochester, NY pursuing a double major in Political Science and Public Relations. She currently serves as the Director of Internal Relations for the Unruh Associates and the Director of Elections for USC’s Pre-Law Fraternity Phi Alpha Delta, previously serving on their Programming Board. Celia is currently interning with Senator Dianne Feinstein and previously interned with Los Angeles City Council President Herb Wesson as a Communications Intern and Community Foundations Leading Change, a national network of community foundations that offers programs and resources to develop community leadership. Outside of work, Celia also mentors young girls through Women and Youth Supporting Each Other, which offers an after-school program to middle school girls aimed to empower and prepare them for their futures. After she graduates from USC, Celia hopes to pursue a career in political communications or political consulting.
+									<h3>Lee Fisher, Administrator</h3>
+									<img style = "width: 50%; height: auto" src= "images/Lee2.jpg")/></a>
+									<p>Lee Fisher is a sophomore studying Political Science with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. Her interest in politics and law began in high school when she joined her school's mock trial team. At USC, she is the Communications Director for USC College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. This past summer, Lee interned with the San Francisco office of U.S. Senator Kamala D. Harris and she is looking forward to other opportunities in 2019. On campus, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
-									<h3>Jose Gutierrez, Director of External Relations</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic15.jpg")/></a>
-									<p>José Gutiérrez is a rising junior from Mexico City. He is pursuing a Political Science and Philosophy double major, and is interested in pursuing a career in art curating. On campus, he is the Director of Student Safety at Undergraduate Student Government, President and Cofounder of defrACT, and a Warren Bennis Scholar. Over the Summer, José was a Leonard Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395.
+									<h3>Tommy Nguyen, Director of External Relations</h3>
+									<img style = "width: 50%; height: auto" src= "images/Tommy2.jpg")/></a>
+									<p>Tommy Nguyen is a freshmen from Irvine, California. He is a double major in History and Psychology, and is interested in pursuing a career in education. He currently serves as the Director of External Relations for the Unruh Associates and is an active member of the  Novus Think Tank and is a delegate for the education committee. Tommy is a delegate for the Undergraduate Student Government in Academic Affairs as well.</p>
 								<!--</section>
 								<section>
 									<span class="icon major fa-phone"></span>
