--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									<div class="4u"><span class="image fit"><img src="images/Group1.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/pic20.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic20.JPG" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 								</div>
