--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 									<span class="icon major fa-binoculars"></span>
 									<h3>José Gutiérrez, Vice President</h3>
 									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
-									<p>José Guillermo Gutiérrez is a junior from Mexico City pursuing a Political Science and Philosophy double major and a minor in Digital Studies. On campus, he is the Director of Student Safety at Undergraduate Student Government and a Warren Bennis Scholar. Over the Summer, José was a Leonard D. Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395. He was also an Action Civics teacher in a local charter school through the Unruh Civic Engagement Program.
+									<p>José Guillermo Gutiérrez is a rising senior from Mexico City pursuing a double major in Political Science and Philosophy. On campus, he is the Director of Student Safety at Undergraduate Student Government and a Warren Bennis Scholar. Over the Summer, José was a Leonard D. Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395. He was also an Action Civics teacher in a local charter school through the Unruh Civic Engagement Program.
 									</p>
 								</section>
 								<section>
