--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<p>
 							</p>
-							<h1><img style = "width: 100%; height: auto" src= "images/pic09.png")/></a>
+							<h1><img style = "width: 100%; height: auto" src= "UnruhLogoBW.png")/></a>
 							</h1>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
