--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:description" content="Politically engaged students at the University of Southern California.">
 		<meta property="og:url" content="http://unruhassociates.org">
 
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="images/TinyCapitolBuilding.png">
 
 		<title>Unruh Associates</title>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,7 +26,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><img src= "images/pic08.png")/></a>
+							<li><img src= "images/TinyCapitolBuilding-02.png")/></a>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Our Mission</a></li>
 							<li><a href="#two">What We Do</a></li>
