--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:description" content="Politically engaged students at the University of Southern California.">
 		<meta property="og:url" content="http://unruhassociates.org">
 
-		<link rel="shortcut icon" href="images/TinyCapitolBuilding.png">
+		<link rel="shortcut icon" style = "width: 10%; height: auto" href="images/TinyCapitolBuilding.png">
 
 		<title>Unruh Associates</title>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
