--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><img style = "width: 30%; height: auto" src= "images/TinyCapitolBuilding-02.png")/></a>
+							<li><img src= "images/favicon.ico")/></a>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Our Mission</a></li>
 							<li><a href="#two">What We Do</a></li>
