--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Our Mission</a></li>
 							<li><a href="#two">What We Do</a></li>
-							<li><a href="#three">Who We Are</a></li>
+							<li><a href="#three">Executive Board</a></li>
 							<li><a href="nvrd.html">NVRD</a></li>
 							<li><a href="#five">Apply</a></li>
 							<li><a href="#six">Contact</a></li>
