--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
 									<span class="icon major fa-pencil"></span>
 									<h3>Lee Fisher, Administrator</h3>
 									<img style = "width: 50%; height: auto" src= "images/Lee2.jpg")/></a>
-									<p>Lee Fisher is a sophomore studying Political Science with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. Her interest in politics and law began in high school when she joined her school's mock trial team. At USC, she is the Communications Director for USC College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. This past summer, Lee interned with the San Francisco office of U.S. Senator Kamala D. Harris and she is looking forward to other opportunities in 2019. On campus, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
+									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
 									<h3>Tommy Nguyen, Director of External Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/Tommy2.jpg")/></a>
-									<p>Tommy Nguyen is a freshmen from Irvine, California. He is a double major in History and Psychology, and is interested in pursuing a career in education. He currently serves as the Director of External Relations for the Unruh Associates and is an active member of the  Novus Think Tank and is a delegate for the education committee. Tommy is a delegate for the Undergraduate Student Government in Academic Affairs as well.</p>
+									<p>Tommy Nguyen is a freshman from Irvine, California. He is a double major in History and Psychology, and is interested in pursuing a career in education. He currently serves as the Director of External Relations for the Unruh Associates and is an active member of the  Novus Think Tank and is a delegate for the education committee. Tommy is a delegate for the Undergraduate Student Government in Academic Affairs as well.</p>
 								<!--</section>
 								<section>
 									<span class="icon major fa-phone"></span>
