--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style2 fade-up">
 						<div class="inner">
-							<h2>Who We Are</h2>
-							<p> The following executive board members were elected for the 2019 calendar year:</p>
+							<h2>Executive Board for 2019</h2>
 							<div class="features">
 								<section>
 									<span class="icon major fa-map"></span>
