--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 									<p>Deven Patel is a sophomore from Irvine, CA, majoring in Environmental Studies with a concentration in Public Policy. He is involved at the Novus Think Tank, Undergraduate Student Government, and Dornsife Ambassadors.He is also a member of the Thematic Option Honors Program. His love for politics stemmed from following the 2016 election, and shortly after, interning with a City Council Member from Irvine.</p>
 								</section>
 								<section>
-									<span class="icon major fa-pencil"></span>
+									<span class="fa fa-money" aria-hidden="true">></span>
 									<h3>Lee Fisher, Administrator</h3>
 									<img style = "width: 50%; height: auto" src= "images/Lee2.jpg")/></a>
 									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
