--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									<span class="icon major fa-binoculars"></span>
 									<h3>José Gutiérrez, Vice President</h3>
 									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
-									<p>José Guillermo Gutiérrez is a rising senior from Mexico City pursuing a double major in Political Science and Philosophy. On campus, he is the Director of Student Safety at Undergraduate Student Government and a Warren Bennis Scholar. Over the Summer, José was a Leonard D. Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395. He was also an Action Civics teacher in a local charter school through the Unruh Civic Engagement Program.
+									<p>José Guillermo Gutiérrez is a rising senior from Mexico City and a Political Science and Philosophy double major. On campus, he is a member of Society 53 and a Warren Bennis Scholar. Previously, he was the Director of Student Safety and an Advocacy Delegate at Undergraduate Student Government, as well as teaching Action Civics at a local charter school through the Unruh Institute’s Building Future Leader’s Program. José has interned at Fundación Baillères, Mayor Eric Garcetti’s Office of International Affairs as a Leonard D. Schaeffer Fellow, Fundación Proempleo, Korn/Ferry International in Mexico City, and did research for Council Member Krekorian through POSC 395. 
 									</p>
 								</section>
 								<section>
