--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									<span class="icon major fa-binoculars"></span>
 									<h3>José Gutiérrez, Vice President</h3>
 									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
-									<p>José Guillermo Gutiérrez is a rising senior from Mexico City and a Political Science and Philosophy double major. On campus, he is a member of Society 53 and a Warren Bennis Scholar. Previously, he was the Director of Student Safety and an Advocacy Delegate at Undergraduate Student Government, as well as teaching Action Civics at a local charter school through the Unruh Institute’s Building Future Leader’s Program. José has interned at Fundación Baillères, Mayor Eric Garcetti’s Office of International Affairs as a Leonard D. Schaeffer Fellow, Fundación Proempleo, Korn/Ferry International in Mexico City, and did research for Council Member Krekorian through POSC 395. 
+									<p>José Guillermo Gutiérrez is a rising senior from Mexico City and a Political Science and Philosophy double major. On campus, he is a member of Society 53 and a Warren Bennis Scholar. Previously, he was the Director of Student Safety and an Advocacy Delegate at Undergraduate Student Government, as well as teaching Action Civics at a local charter school through the Unruh Institute’s Building Future Leader’s Program. José has interned at Fundación Baillères, Mayor Eric Garcetti’s Office of International Affairs as a Leonard D. Schaeffer Fellow, Fundación Proempleo, Korn/Ferry International in Mexico City, and did research for Council Member Krekorian through POSC 395.
 									</p>
 								</section>
 								<section>
@@ -284,7 +284,7 @@
 						<div class="inner">
 							<h2>Apply</h2>
 							<!-- Oskar, enter the link to the application in between the quotes after href below -->
-							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfSrav-GfhKOSqbJhkf8k0tcQyumbxrB7e3kiysIEGNOJhDJw/viewform" class="button big fit icon fa-external-link" target="_blank">Applications will be live Spring 2019</a></li></p>
+							<p><a href="https://docs.google.com/forms/d/1kDv1rs-tFN4zaDVLtZpKps7eZIIdMMj8a6UFlPzumaQ/viewform?edit_requested=true" class="button big fit icon fa-external-link" target="_blank">Applications will be live Spring 2019</a></li></p>
 							<p> <b> What We’re Looking For</b>
  							<p> Unruh Associates is open to all undergraduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills. An Unruh Associates is someone who is tolerant and open-minded, willing to learn about new topics and hear different viewpoints, and ready to jump into the conversation. We are looking for people who are engaged or looking to be engaged in the community, and are enthusiastic about Unruh Associates and its mission. </p>
 
