--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 						<div class="inner">
 							<h2>Apply</h2>
 							<!-- Oskar, enter the link to the application in between the quotes after href below -->
-							<p><a href="https://docs.google.com/forms/d/1kDv1rs-tFN4zaDVLtZpKps7eZIIdMMj8a6UFlPzumaQ/viewform?edit_requested=true" class="button big fit icon fa-external-link" target="_blank">Applications will be live Spring 2019</a></li></p>
+							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeaBFeKlsik0qpePfYq743vg0TrBWZ6qqUw__SazwgGXsqtOg/viewform" class="button big fit icon fa-external-link" target="_blank">Applications will be live Spring 2019</a></li></p>
 							<p> <b> What We’re Looking For</b>
  							<p> Unruh Associates is open to all undergraduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills. An Unruh Associates is someone who is tolerant and open-minded, willing to learn about new topics and hear different viewpoints, and ready to jump into the conversation. We are looking for people who are engaged or looking to be engaged in the community, and are enthusiastic about Unruh Associates and its mission. </p>
 
@@ -292,13 +292,13 @@
 
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2019 at 5:00 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+							<p>(1) You must attend the Unruh Open House in SOS B15 on January 28, 2020 at 5:00 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application opens on January 11, 2019 and is due January 19, 2019 at 5:00 PM.
+							<br>(2) The written application opens on January 28, 2020 and is due February 2, 2020 at 11:59 PM.
 
-							<br>(3) An individual interview will be conducted sometime between January 21-24, 2019.</p>
+							<br>(3) Applicants will be notifies of interview dates shortly thereafter.</p>
 
-							<p>Applicants will be notified of their application status on January 25, 2019. Shortly after the interviews we will welcome our new members!</p>
+							<p>Shortly after the interviews we will welcome our new members!</p>
 
 							<b>What if I’m a freshman or have recently become interested in politics?</b>
 
